--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -55,8 +55,8 @@
   <div class="col-md-12 mt-2" *hasClaim="'DB_SUBSTATUSLIST'">
    <app-sub-status-list></app-sub-status-list>
   </div>
-  <div class="col-md-12 mt-2">
+  <!-- <div class="col-md-12 mt-2">
     <app-interaction-list-by-team *hasClaim="'DB_TEAMWISELIST'"></app-interaction-list-by-team>
-  </div>
+  </div> -->
 
 </div>
