interaction report list

--- a/src/app/interaction-reports/dump-repoert/dump-repoert.component.html
+++ b/src/app/interaction-reports/dump-repoert/dump-repoert.component.html
@@ -72,7 +72,7 @@
             </ng-container>
             <ng-container matColumnDef="assignedTo">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Assign To</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.assignToName || row?.assignedto}} </td>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.assignToName || row?.assignedTo}} </td>
             </ng-container>
             <ng-container matColumnDef="contactName">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Contact Name</th>
