--- a/src/app/interaction-reports/resolved-interactions-reports-list/resolved-interactions-reports-list.component.html
+++ b/src/app/interaction-reports/resolved-interactions-reports-list/resolved-interactions-reports-list.component.html
@@ -74,7 +74,7 @@
             </ng-container>
             <ng-container matColumnDef="assignto">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Assign To</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.assignToName || row?.assignedto}}
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.assignToName || row?.assignedTo}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="contant">
