client feedback changes

--- a/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
+++ b/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
@@ -2,7 +2,7 @@
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
-                <h1>All Team Dump Reports</h1>
+                <h1>All Team Reports</h1>
             </div>
         </div>
     </div>
