--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -322,7 +322,7 @@
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>
-                All Teams Dump Report
+                All Team Report
               </p>
             </a>
           </li>
